// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterSideBar/> Matches the snapshot for any other category, i.e. USERS 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <ConnectedCategory />
  <ConnectedDateRange />
  <ConnectedInterval />
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for category: TOP_FAVORITES 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <ConnectedCategory />
  <ConnectedEventType />
  <ConnectedPageSize />
  <ConnectedSortOrder />
</aside>
`;

exports[`<FilterSideBar/> Matches the snapshot for default category: FAVORITE_VIEWS 1`] = `
<aside
  className="uaa-filter-sidebar"
>
  <h1
    className="uaa-app-header"
  >
    Usage Analytics
  </h1>
  <ConnectedCategory />
  <ConnectedDateRange />
  <ConnectedInterval />
  <ConnectedAggregationLevel />
  <ConnectedChartType />
</aside>
`;
